[package]
name = "solana-store"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_store"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = [ "anchor-lang/anchor-debug" ]

[dependencies]
anchor-lang = {version = "0.30.1" }